@@ -123,6 +123,7 @@ Bug fixes:
 - PR#6352: Automatic removal of optional arguments and sequencing
 - PR#6361: Hashtbl.hash not terminating on some lazy values w/ recursive types
 - PR#6383: Exception Not_found when using object type in absent module
+- PR#6384: Uncaught Not_found exception with a hidden .cmi file
 - fix -dsource printing of "external _pipe = ..."
   (Gabriel Scherer)
 - bound-checking bug in caml_string_{get,set}{16,32,64}
